--- a/04-css/normalize.css
+++ b/04-css/normalize.css
@@ -21,24 +21,7 @@ html {
  */
 
 body {
-  margin: 0;    /*  Barva pisave pod značko oz. oznako  */
-  color: #333333; 
-  /*  Določanje pisave: brskalnik uporabi prvo v seznamu pisav, ki jo ima uporabnik nameščeno.
-     Če ni nameščena nobena od naštetih pisav, se uporabi privzeta pisava brskalnika. */
-  font-family: Garamond, "Hoefler Text", "Times New Roman", Times, serif;
-  /*  Velikost pisave lahko določimo na več načinov.
-      Spodnji jo določi glede na velikost pisave v znački, ki je na enem nivoju višje;
-      če velikost pisave na zgornjem nivoju ni določena, se določi glede na privzeto velikost pisave v brskalniku. */
-  font-size: 1.2em;
-  /*  Višina vrstice  */
-  line-height: 1.5;
-  /*  Največja širina vsebine spletne strani  */
-  max-width: 40em;
-  /*  Širina zunanjega roba; auto pomeni, da rob izračuna brskalnik tako, da element zavzame širino določeno v slogu,
-      preostanek pa se enakomerno razdeli med levim in desnim robom  */
-  margin: auto;
-  /*  Obojestranska poravnava besedila    */
-  text-align: justify;
+  margin: 0;
 }
 
 /**
@@ -90,14 +73,9 @@ pre {
  * Remove the gray background on active links in IE 10.
  */
 
-a { text-decoration: none; outline:none; }
-/*  Spremenimo barve povezav: neobiskanih, obiskanih, pod miško in aktivnih */
-a:link { color:#cc0000; }
-a:visited { color:#660066; }
-a:hover { color:#660066; }
-a:active { color:#990000; outline:none; }
-
-
+a {
+  background-color: transparent;
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57-
@@ -124,11 +102,7 @@ strong {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 
-code{
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  color: #009966;
-}
-
+code,
 kbd,
 samp {
   font-family: monospace, monospace; /* 1 */
@@ -373,4 +347,3 @@ template {
 [hidden] {
   display: none;
 }
-
