--- a/04-css/css/oblikovanje.css
+++ b/04-css/css/oblikovanje.css
@@ -4,16 +4,23 @@ h2{
     padding: 0.5em;}
 #uvod {padding: 2em;
     background-color: rgb(51, 0, 102,0.1);}
-.slika {
+.slika  {
     font-size: 0.9em;
     width: 40%;
     text-align: left;
     float: right;
     margin-left: 2em;
+    
+    
      }
+.slika p:last-child{
+    font-size: 0.8em;
+margin-top: 10px;
+}
 .slika img{
     width: 100%;
 height: auto;
+border-radius: 50%;
 }
 
 
